@@ -5,6 +5,7 @@ NEXT
     - credit Gizmo Mathboy for the name. (GH#3)
     - mention alternatives. (GH#7)
     - add --stdin option for 'run'. (GH#5)
+    - abort hook chain if one of them fails.
 
 0.0.1 2019-11-11
     - Initial release.
